@@ -1,6 +1,4 @@
 import { Panel } from '@lib/ui/css/panel'
-import { WorkBudgetDaysReport } from './WorkBudgetDaysReport'
-import { WorkBudgetWeeksReport } from './WorkBudgetWeeksReport'
 import { CurrentWeekVsBudget } from './CurrentWeekVsBudget'
 import { SeparatedByLine } from '@lib/ui/layout/SeparatedByLine'
 
@@ -9,8 +7,6 @@ export const WorkBudgetReport = () => {
     <Panel kind="secondary">
       <SeparatedByLine gap={40}>
         <CurrentWeekVsBudget />
-        <WorkBudgetDaysReport />
-        <WorkBudgetWeeksReport />
       </SeparatedByLine>
     </Panel>
   )
