@@ -158,3 +158,7 @@ export type SizedComponentProps<T = number> = {
 export type ComponentWithStatusProps<T> = {
   status: T
 }
+
+export type NamedComponentProps = {
+  name: string
+}
